# goit-datascience-hw

./: README.md  pyproject.toml
hw-1/: Hw1.ipynb
hw-2/: Hw2.1.ipynb  Hw2.2.ipynb  Hw2.3.ipynb
