[tool.poetry]
name = "goit-datascience-hw"
version = "0.1.0"
description = ""
authors = ["kbuhantsev <k.buhantsev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
numpy = "^2.0.0"
pandas = {extras = ["html"], version = "^2.2.2"}
lxml = "^5.2.2"
html5lib = "^1.1"
matplotlib = "^3.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
